style(ux): increase minimized drawer height and fix next song alignment

--- a/src/index.css
+++ b/src/index.css
@@ -453,7 +453,7 @@ input[type=range]::-moz-range-track {
 
 .setlist-section {
   position: absolute;
-  top: calc(100dvh - 210px);
+  top: calc(100dvh - 230px);
   left: 0;
   width: 100%;
   height: calc(100dvh - 60px);
